# AI-Lead-Scoring-and-Enrichment-Dashboard

./: .gitignore  CHALLENGE_EVALUATION.md  DEMO_WALKTHROUGH.ipynb  DEPLOYMENT.md  KAGGLE_DATASET_GUIDE.md  ML_PIPELINE.md  NAME_CORRECTION_VERIFICATION.md  PROJECT_COMPLETION.md  PROJECT_STRUCTURE.md  README.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  VIDEO_SCRIPT.md
backend/: .env.example  .gitignore  DATASET.md  README.md  kaggle_leads.csv  leads_10k.csv  process_kaggle_dataset.py  pyproject.toml  sample-leads.csv
backend/src/: app.py
backend/src/models/: lead.py
backend/src/routes/: api.py
backend/src/utils/: cleaning.py  enrichment.py  pipeline.py  scoring.py  validation.py
frontend/: README.md  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: FiltersPanel.tsx  LeadTable.tsx  ProcessingProgress.tsx  ScoreBadge.tsx
