[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
]
